📝 docs: complete README with architecture, protocol reference, how to run, test results